# cor-model

./: .gitignore  CMakeLists.txt  build.sh
lib/chaos/: CMakeLists.txt  chaos.c  chaos.h
lib/chaos/coefs/: chaos_7_16.h  chaos_coefs.h
lib/internal/: CMakeLists.txt  internal.c  internal.h
lib/internal/coefs/: cals10k_2_coefs.h  coefs.h  hist_coefs.h  igrf_10_coefs.h  igrf_11_coefs.h  igrf_12_coefs.h  igrf_13_coefs.h  igrf_14_coefs.h  igrf_9_coefs.h
lib/t96/: CMakeLists.txt  t96.c  t96.h
lib/ts05/: CMakeLists.txt  birk_tot.c  birk_tot.h  deformed.c  deformed.h  full_rc.c  full_rc.h  ts05.c  ts05.h
src/: args.c  args.h  common.h  field.c  field.h  io.c  io.h  main.c  models.c  models.h  trajectory.c  trajectory.h  utils.c  utils.h
